# Theaterwagen

./: .cproject  .gitignore  .project  CMakeLists.txt  installing.txt  loggingmate.txt  theaterwagen_toolchain.cmake
include/: ButtonFactory.hpp  ChaseFactory.hpp  CloneFactory.hpp  FileHandler.hpp  FixtureFactory.hpp  HomeHandler.hpp  LiftFactory.hpp  MotorFactory.hpp  MusicFactory.hpp  SceneFactory.hpp  SoundFactory.hpp  Theaterwagen.hpp  ToggleFactory.hpp  WebHandler.hpp  uDMX_cmds.h
resources/: .gitignore  CrossCompiles  Network  QT  XPi  cross opencv 3.2  display  done_stuff  hardware_acc_aanpassingen.txt  language_instruction.txt  ldd.txt  linkage  muziek.txt  step-by-step  style.css  udmx.link
src/: .gitignore  ButtonFactory.cpp  ButtonFactory.hpp  CaptureFactory.cpp  CaptureFactory.hpp  ChaseFactory.cpp  ChaseFactory.hpp  CloneFactory.cpp  CloneFactory.hpp  FileHandler.cpp  FileHandler.hpp  FixtureFactory.cpp  FixtureFactory.hpp  HomeHandler.cpp  HomeHandler.hpp  LiftFactory.cpp  LiftFactory.hpp  MotorFactory.cpp  MotorFactory.hpp  MusicFactory.cpp  MusicFactory.hpp  SceneFactory.cpp  SceneFactory.hpp  Schip.cpp  Schip.h  SoundFactory.cpp  SoundFactory.hpp  Theaterwagen.cpp  Theaterwagen.hpp  ToggleFactory.cpp  ToggleFactory.hpp  UploadHandler.cpp  UploadHandler.hpp  WebHandler.cpp  WebHandler.hpp  civetweb.c  face_dlib.cpp  files.html  handle_form.inl  index.html
src/po/: theaterwagen.pot
src/po/nl/: theaterwagen.mo  theaterwagen.po
